--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,22 +8,21 @@ edition = "2018"
 
 [[bin]]
 name = "client"
-required-features = ["structopt", "reqwest"]
+required-features = ["reqwest"]
 
 [[bin]]
 name = "server"
-required-features = ["warp", "tokio/stream", "tempfile", "tokio/process"]
+required-features = ["warp", "tokio/process"]
 
 [dependencies]
-structopt = { version = "0.3.15", optional = true }
-reqwest = { version = "0.10.6", optional = true }
+structopt = { version = "0.3.15"}
+reqwest = { version = "0.10.6", optional = true , features = ["json"]}
 
 serde = { version = "1.0.114", features = ["derive"] }
 serde_json = "1.0.56"
 
-tokio = { version = "0.2.21", features = ["macros", "rt-core", "fs"] }
+tokio = { version = "0.2.21", features = ["macros", "rt-core"] }
 
 anyhow = "1.0.31"
 
 warp = { version = "0.2.3", optional = true }
-tempfile = { version = "3.1", optional = true }
